# python_project

./: .gitignore  flake.nix  pyproject.toml
python_project/: __init__.py
